--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "css-loader": "^6.7.1",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "style-loader": "^3.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
