--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "style-loader": "^3.3.1"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.1",
     "autoprefixer": "^10.4.4",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
