--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/config": "^0.0.41",
     "css-loader": "^6.7.1",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "tsconfig.json": "^1.0.11"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.2.1",
@@ -21,6 +23,7 @@
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
     "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.6.3"
   }
 }
