--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@types/config": "^0.0.41",
+    "bootstrap": "^5.1.3",
     "css-loader": "^6.7.1",
     "next": "12.1.5",
+    "postcss": "^8.4.12",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "style-loader": "^3.3.1",
@@ -19,11 +21,8 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.2.1",
-    "autoprefixer": "^10.4.4",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3"
   }
 }
